# kino-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  gitleaks.toml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/services/: __init__.py  tmdb.py
backend/tests/: test_tmdb_client.py  test_tmdb_stub.py
bot/: main.py
docs/: ci-badge-snippet.md  overview.md
http/: api.http
infra/: docker-compose.yml
miniapp/: README.md  package.json
miniapp/src/: styles.css
miniapp/src/ui/: App.tsx  PresetCard.tsx
prompts/: BUILD_PLAN.md
